add IJ files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ hs_err_pid*
 
 # Эта папка используется maven в качестве папки для хранения скомпилированных кодов
 target/
+
+# IJ files
+
+.idea/
+*.iml 
